--- a/2012-06-21-composer/index.html
+++ b/2012-06-21-composer/index.html
@@ -65,7 +65,7 @@
         <ul class="build">
           <li>Kto programuje w PHP?</li>
           <li>Kto używa frameworków PHP?</li>
-          <li>Kto słyszał o <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-0.md">PSR-0?</a></li>
+          <li>Kto słyszał o <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-0.md">PSR-0</a>?</li>
           <li>Kto używa systemu kontroli wersji?</li>
           <li>Kto używa Gita?</li>
         </ul>
@@ -87,7 +87,7 @@
 
         <ul class="build">
           <li>PEAR instaluje pakiety globalnie</li>
-          <li>Tworzenie własnych pakietów i własnego kanału jest skomplikowane (<a href="http://pirum.sensiolabs.org/">Prium</a> rozwiązuje problem tworzenia kanału, <a href="http://pearfarm.org/">Pearfarm</a> ułatwia tworzenie pakietów)</li>
+          <li>Tworzenie własnych pakietów i własnego kanału jest skomplikowane (<a href="http://pirum.sensiolabs.org/">Pirum</a> rozwiązuje problem tworzenia kanału, <a href="http://pearfarm.org/">Pearfarm</a> ułatwia tworzenie pakietów)</li>
           <li>Definiowanie zależności dla projektu nie jest elastyczne</li>
           <li>Instalacja samego narzędzia sprawia jeszcze czasem problemy</li>
           <li>Ogólnie jest zbyt skomplikowany (<a href="http://example.preinheimer.com/phpunit.html">My quest to test ZendFramework...</a>): PEAR oznacza bibliotekę, system instalacji pakietów, styl kodowania, PECL, społeczność</li>
