--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>My talks:</h1>
 
         <ul>
+            <li><a href="2012-09-20-php54/">PHP 5.4</a>, <a href="http://spug.pl/">SPUG</a> (Gliwice), 2012-09-20</li>
             <li><a href="2012-06-21-composer/">Composer - zarządzanie zależnościami w PHP</a>, <a href="http://spug.pl/">SPUG</a> (Gliwice), 2012-06-21</li>
         </ul>
     </body>
