Added PHPCon Poland 2012 talk

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h1>My talks:</h1>
 
         <ul>
-            <li><a href="2012-09-20-php54/">PHP 5.4</a>, <a href="http://spug.pl/">SPUG</a> (Gliwice), 2012-09-20</li>
+            <li><a href="2012-09-28-composer/">Composer - zarządzanie zależnościami w PHP</a>, <a href="http://www.phpcon.pl/2012/pl/">PHPCon Poland 2012</a> (Mąchocice Kapitulne), 2012-09-28</li>
+            <li><a href="2012-09-20-php54/">PHP 5.4</a> (<a href="http://www.youtube.com/watch?v=muczXhUb3nQ">video</a>), <a href="http://spug.pl/">SPUG</a> (Gliwice), 2012-09-20</li>
             <li><a href="2012-06-21-composer/">Composer - zarządzanie zależnościami w PHP</a>, <a href="http://spug.pl/">SPUG</a> (Gliwice), 2012-06-21</li>
         </ul>
     </body>
