--- a/2013-10-27-oauth-phpcon2013/index.html
+++ b/2013-10-27-oauth-phpcon2013/index.html
@@ -499,5 +499,15 @@ Location: http://example.com/cb#access_token=2YotnFZFEjr1zCsicMWpAA
 
         </script>
 
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-45601006-1', 'michal-pipa.github.io');
+            ga('send', 'pageview');
+        </script>
+
     </body>
 </html>
