Add PHPCon Poland 2014 talk

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>My talks:</h1>
 
         <ul>
+            <li><a href="2014-09-28-symfony2-architecture-phpcon2014/">Symfony2 Architecture</a>, <a href="http://www.phpcon.pl/2014/pl/">PHPCon Poland 2014</a> (Szczyrk), 2014-09-28</li>
             <li><a href="2014-09-11-whats-new-php-phpers/">What's new in PHP</a>, <a href="http://phpers.pl/">PHPers</a> (Katowice), 2014-09-11</li>
             <li><a href="2013-10-27-oauth-phpcon2013/">Introduction to OAuth 2.0</a>, <a href="https://phpcon.pl/2013/pl/">PHPCon Poland 2013</a> (Szczyrk), 2013-10-27</li>
             <li><a href="2013-01-17-symfony-rest/">RESTful web services with Symfony2</a>, <a href="http://pysilesia.org/spotkanie-styczniowe-rest/">PySilesia</a> (Gliwice), 2013-01-17</li>
