--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ Location: http://example.com/cb#access_token=2YotnFZFEjr1zCsicMWpAA
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'UA-45601006-1', 'michal-pipa.github.io');
+            ga('create', 'UA-45601006-1', 'auto');
             ga('send', 'pageview');
         </script>
 
