Fix Twitter URL

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h2>About me</h2>
 
                     <ul>
-                        <li>Michał Pipa <span class="fragment roll-in">(<a href="">@michalpipa</a>)</span></li>
+                        <li>Michał Pipa (<a href="https://twitter.com/michalpipa">@michalpipa</a>)</li>
                         <li>Software developer and trainer at <a href="http://iteo.co/">Iteo</a></li>
                         <li>Zend Certified Engineer</li>
                         <li>Free software enthusiast (<a href="http://symfony.com/">Symfony</a>)</li>
