Add "PHP 7" 4developers 2016 talk

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>My talks:</h1>
 
         <ul>
+            <li><a href="2016-04-11-php7-4developers2016/">PHP 7</a>, <a href="http://2016.4developers.org.pl/">4developers</a> (Warszawa), 2016-04-11</li>
             <li><a href="2015-05-30-whats-new-php-dcwroc/">What's new in PHP</a>, <a href="http://www.drupalcampwroclaw.pl/">Drupal Camp</a> (Wrocław), 2015-05-30</li>
             <li><a href="2014-10-18-symfony2-architecture-dcwroc">Symfony2 Architecture</a>, <a href="http://2014.dcwroc.pl/">Drupal Camp Wrocław 2014</a> (Wrocław), 2014-10-18</li>
             <li><a href="2014-10-06-oauth2-sc-silesia/">Introduction to OAuth 2.0</a>, <a href="http://www.meetup.com/sc-silesia/">Software Craftmanship Silesia</a> (Katowice), 2014-10-06</li>
