--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<section>
                     <h1>Time and date for programmers</h1>
                     <h3>Michał Pipa</h3>
-                    <h3>Boiling Frogs, Wrocław, 2017-02-25</h3>
+                    <h3>WeBB, Bielsko-Biała, 2017-05-11</h3>
                 </section>
 
 				<section>
