--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<section>
                     <h1>Time and date for programmers</h1>
                     <h3>Michał Pipa</h3>
-                    <h3>WeBB, Bielsko-Biała, 2017-05-11</h3>
+                    <h3>PHPers Summit, Poznań, 2017-09-02</h3>
                 </section>
 
 				<section>
@@ -40,10 +40,17 @@
                     <ul>
                         <li>PHP &amp; Symfony</li>
                         <li><a href="http://phpers.pl/">PHPers</a></li>
+                        <li>szkolenia, konsulatcje</li>
                     </ul>
                 </section>
 
 				<section>
+                    <h1>phpCE</h1>
+
+                    <h2>summit2017</h2>
+                </section>
+
+                <section>
                     <h1>Date format</h1>
                 </section>
 
@@ -85,6 +92,12 @@
                     <h2>Unix timestamp</h2>
 
                     <p>1488024000</p>
+                </section>
+
+                <section>
+                    <h2>1 500 000 000</h2>
+
+                    <p>Fri Jul 14 04:40:00 CEST 2017</p>
                 </section>
 
                 <section>
